added slide shop and fix

--- a/app/index.html
+++ b/app/index.html
@@ -1012,9 +1012,312 @@
               </div>
             </section>
           </div>
-          <div class="swiper-slide">
-            <section class="main-swiper-slide">
+          <div class="swiper-slide" data-transfer-classes="header--shop">
+            <section class="main-swiper-slide shop">
+              <div class="main-swiper-slide-container">
+                <div class="container">
+                  <div class="section-header">
+                    <h2 class="section-title">
+                      shop
+                    </h2>
+                    <p class="section-subtitle">
+                      The ultimate collection made for an
+                      <br>
+                      active lifestyle is now at the shop.
+                    </p>
+                  </div>
+                </div>
+                <div class="swiper-container shop-swiper">
+                  <button type="button" class="btn swiper-button-prev">
+                    <span class="icon">
+                      <svg>
+                        <use xlink:href="img/icons/arrow-left.svg#svg-arrow-left"></use>
+                      </svg>
+                    </span>
+                  </button>
+                  <button type="button" class="btn swiper-button-next">
+                    <span class="icon">
+                      <svg>
+                        <use xlink:href="img/icons/arrow-right.svg#svg-arrow-right"></use>
+                      </svg>
+                    </span>
+                  </button>
 
+                  <div class="swiper-filter">
+                    <input type="radio" class="btn-check" name="shop-filter" id="shop-filter-all" autocomplete="off" checked>
+                    <label class="btn btn-inline" for="shop-filter-all">
+                      all products
+                    </label>
+
+                    <input type="radio" class="btn-check" name="shop-filter" id="shop-filter-top" autocomplete="off">
+                    <label class="btn btn-inline" for="shop-filter-top">
+                      top
+                    </label>
+
+                    <input type="radio" class="btn-check" name="shop-filter" id="shop-filter-bottom" autocomplete="off">
+                    <label class="btn btn-inline" for="shop-filter-bottom">
+                      bottom
+                    </label>
+
+                    <input type="radio" class="btn-check" name="shop-filter" id="shop-filter-accessores" autocomplete="off">
+                    <label class="btn btn-inline" for="shop-filter-accessores">
+                      accessores
+                    </label>
+                  </div>
+                  <div class="swiper">
+                    <div class="swiper-wrapper">
+                      <div class="swiper-slide">
+                        <div class="shop-card"
+                          data-swiper-filter="shop-filter-all shop-filter-top">
+                          <a href="#" class="stretched-link"></a>
+                          <span class="shop-card-bg" style="background-image: url(../img/shop/shop-1.webp);"></span>
+                          <div class="shop-card-info">
+                            <div class="shop-card-info-start">
+                              <h3 class="shop-card-title">
+                                Leggings
+                              </h3>
+                              <p class="shop-card-price">
+                                $100
+                              </p>
+                            </div>
+
+                            <div class="shop-card-info-end">
+                              <div class="shop-card-size">
+                                S | M | L
+                              </div>
+
+                              <div class="shop-card-colors">
+                                <span class="shop-card-color" style="--_color: pink;"></span>
+                                <span class="shop-card-color" style="--_color: blue;"></span>
+                                <span class="shop-card-color" style="--_color: black;"></span>
+                                <span class="shop-card-color" style="--_color: gray;"></span>
+                                <span class="shop-card-color" style="--_color: white;"></span>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="swiper-slide">
+                        <div class="shop-card"
+                          data-swiper-filter="shop-filter-all shop-filter-accessores">
+                          <a href="#" class="stretched-link"></a>
+                          <span class="shop-card-bg" style="background-image: url(../img/shop/shop-2.webp);"></span>
+                          <div class="shop-card-info">
+                            <div class="shop-card-info-start">
+                              <h3 class="shop-card-title">
+                                Leggings
+                              </h3>
+                              <p class="shop-card-price">
+                                $100
+                              </p>
+                            </div>
+
+                            <div class="shop-card-info-end">
+                              <div class="shop-card-size">
+                                S | M | L
+                              </div>
+
+                              <div class="shop-card-colors">
+                                <span class="shop-card-color" style="--_color: pink;"></span>
+                                <span class="shop-card-color" style="--_color: blue;"></span>
+                                <span class="shop-card-color" style="--_color: black;"></span>
+                                <span class="shop-card-color" style="--_color: gray;"></span>
+                                <span class="shop-card-color" style="--_color: white;"></span>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="swiper-slide">
+                        <div class="shop-card"
+                          data-swiper-filter="shop-filter-all shop-filter-accessores">
+                          <a href="#" class="stretched-link"></a>
+                          <span class="shop-card-bg" style="background-image: url(../img/shop/shop-1.webp);"></span>
+                          <div class="shop-card-info">
+                            <div class="shop-card-info-start">
+                              <h3 class="shop-card-title">
+                                Leggings
+                              </h3>
+                              <p class="shop-card-price">
+                                $100
+                              </p>
+                            </div>
+
+                            <div class="shop-card-info-end">
+                              <div class="shop-card-size">
+                                S | M | L
+                              </div>
+
+                              <div class="shop-card-colors">
+                                <span class="shop-card-color" style="--_color: pink;"></span>
+                                <span class="shop-card-color" style="--_color: blue;"></span>
+                                <span class="shop-card-color" style="--_color: black;"></span>
+                                <span class="shop-card-color" style="--_color: gray;"></span>
+                                <span class="shop-card-color" style="--_color: white;"></span>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="swiper-slide">
+                        <div class="shop-card"
+                          data-swiper-filter="shop-filter-all shop-filter-accessores">
+                          <a href="#" class="stretched-link"></a>
+                          <span class="shop-card-bg" style="background-image: url(../img/shop/shop-2.webp);"></span>
+                          <div class="shop-card-info">
+                            <div class="shop-card-info-start">
+                              <h3 class="shop-card-title">
+                                Leggings
+                              </h3>
+                              <p class="shop-card-price">
+                                $100
+                              </p>
+                            </div>
+
+                            <div class="shop-card-info-end">
+                              <div class="shop-card-size">
+                                S | M | L
+                              </div>
+
+                              <div class="shop-card-colors">
+                                <span class="shop-card-color" style="--_color: pink;"></span>
+                                <span class="shop-card-color" style="--_color: blue;"></span>
+                                <span class="shop-card-color" style="--_color: black;"></span>
+                                <span class="shop-card-color" style="--_color: gray;"></span>
+                                <span class="shop-card-color" style="--_color: white;"></span>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="swiper-slide">
+                        <div class="shop-card"
+                          data-swiper-filter="shop-filter-all shop-filter-bottom">
+                          <a href="#" class="stretched-link"></a>
+                          <span class="shop-card-bg" style="background-image: url(../img/shop/shop-1.webp);"></span>
+                          <div class="shop-card-info">
+                            <div class="shop-card-info-start">
+                              <h3 class="shop-card-title">
+                                Leggings
+                              </h3>
+                              <p class="shop-card-price">
+                                $100
+                              </p>
+                            </div>
+
+                            <div class="shop-card-info-end">
+                              <div class="shop-card-size">
+                                S | M | L
+                              </div>
+
+                              <div class="shop-card-colors">
+                                <span class="shop-card-color" style="--_color: pink;"></span>
+                                <span class="shop-card-color" style="--_color: blue;"></span>
+                                <span class="shop-card-color" style="--_color: black;"></span>
+                                <span class="shop-card-color" style="--_color: gray;"></span>
+                                <span class="shop-card-color" style="--_color: white;"></span>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="swiper-slide">
+                        <div class="shop-card"
+                          data-swiper-filter="shop-filter-all shop-filter-bottom">
+                          <a href="#" class="stretched-link"></a>
+                          <span class="shop-card-bg" style="background-image: url(../img/shop/shop-2.webp);"></span>
+                          <div class="shop-card-info">
+                            <div class="shop-card-info-start">
+                              <h3 class="shop-card-title">
+                                Leggings
+                              </h3>
+                              <p class="shop-card-price">
+                                $100
+                              </p>
+                            </div>
+
+                            <div class="shop-card-info-end">
+                              <div class="shop-card-size">
+                                S | M | L
+                              </div>
+
+                              <div class="shop-card-colors">
+                                <span class="shop-card-color" style="--_color: pink;"></span>
+                                <span class="shop-card-color" style="--_color: blue;"></span>
+                                <span class="shop-card-color" style="--_color: black;"></span>
+                                <span class="shop-card-color" style="--_color: gray;"></span>
+                                <span class="shop-card-color" style="--_color: white;"></span>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="swiper-slide">
+                        <div class="shop-card"
+                          data-swiper-filter="shop-filter-all shop-filter-bottom">
+                          <a href="#" class="stretched-link"></a>
+                          <span class="shop-card-bg" style="background-image: url(../img/shop/shop-1.webp);"></span>
+                          <div class="shop-card-info">
+                            <div class="shop-card-info-start">
+                              <h3 class="shop-card-title">
+                                Leggings
+                              </h3>
+                              <p class="shop-card-price">
+                                $100
+                              </p>
+                            </div>
+
+                            <div class="shop-card-info-end">
+                              <div class="shop-card-size">
+                                S | M | L
+                              </div>
+
+                              <div class="shop-card-colors">
+                                <span class="shop-card-color" style="--_color: pink;"></span>
+                                <span class="shop-card-color" style="--_color: blue;"></span>
+                                <span class="shop-card-color" style="--_color: black;"></span>
+                                <span class="shop-card-color" style="--_color: gray;"></span>
+                                <span class="shop-card-color" style="--_color: white;"></span>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="swiper-slide">
+                        <div class="shop-card"
+                          data-swiper-filter="shop-filter-all shop-filter-bottom">
+                          <a href="#" class="stretched-link"></a>
+                          <span class="shop-card-bg" style="background-image: url(../img/shop/shop-2.webp);"></span>
+                          <div class="shop-card-info">
+                            <div class="shop-card-info-start">
+                              <h3 class="shop-card-title">
+                                Leggings
+                              </h3>
+                              <p class="shop-card-price">
+                                $100
+                              </p>
+                            </div>
+
+                            <div class="shop-card-info-end">
+                              <div class="shop-card-size">
+                                S | M | L
+                              </div>
+
+                              <div class="shop-card-colors">
+                                <span class="shop-card-color" style="--_color: pink;"></span>
+                                <span class="shop-card-color" style="--_color: blue;"></span>
+                                <span class="shop-card-color" style="--_color: black;"></span>
+                                <span class="shop-card-color" style="--_color: gray;"></span>
+                                <span class="shop-card-color" style="--_color: white;"></span>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </section>
           </div>
         </div>
@@ -1138,8 +1441,13 @@
     </div>
     <div class="offcanvas-body"
 		data-transfer-target="contacts-transfer header-navigation">
-        <nav class="nav header-nav" title="header nav">
+        <nav class="nav header-nav contacts-nav" title="header nav">
       <ul class="list-reset nav__list">
+        <li class="nav__item">
+          <a href="#" class="btn nav__link">
+            contacts
+          </a>
+        </li>
         <li class="nav__item">
           <a href="#" class="btn nav__link">
             privacy policy
