added page product

--- a/app/index copy.html
+++ b/app/index copy.html
@@ -18,37 +18,25 @@
 
 <body class="page__body">
   <h1 class="visually-hidden">
-    Page title
+    Заголовок страницы
 </h1>
   <div class="site-container">
-    <header class="header @class">
+    <header class="header">
   <div class="container header-container">
-    <div class="header-top">
-      <div class="header-top-main">
-        <div class="logo">
-          shop
-        </div>
+    <div class="header-buttons">
+      <a href="cart.html" class="btn btn-cart">
+        <span class="icon">
+          <svg>
+            <use xlink:href="img/icons/cart.svg#svg-cart"></use>
+          </svg>
+        </span>
+      </a>
 
-        <div class="header-buttons">
-          <a href="cart.html" class="btn btn-cart">
-            <span class="icon">
-              <svg>
-                <use xlink:href="img/icons/cart.svg#svg-cart"></use>
-              </svg>
-            </span>
-          </a>
+      <button type="button" class="btn burger"
+        data-bs-toggle="offcanvas" data-bs-target="#offcanvas-navigation" aria-controls="offcanvasNavigation">
+        home
 
-          <button type="button" class="btn burger"
-            data-bs-toggle="offcanvas" data-bs-target="#offcanvas-navigation" aria-controls="offcanvasNavigation">
-            home
-
-            <span class="icon"></span>
-          </button>
-        </div>
-      </div>
-
-      <button type="button" class="btn btn-back">
-        come back
+        <span class="icon"></span>
       </button>
     </div>
 
@@ -993,7 +981,7 @@
                       <div class="swiper-slide">
                         <div class="shop-card"
                           data-swiper-filter="shop-filter-all shop-filter-top">
-                          <a href="card.html" class="stretched-link"></a>
+                          <a href="#" class="stretched-link"></a>
                           <span class="shop-card-bg" style="background-image: url(img/shop/shop-1.webp);"></span>
                           <div class="shop-card-info">
                             <div class="shop-card-info-start">
@@ -1024,7 +1012,7 @@
                       <div class="swiper-slide">
                         <div class="shop-card"
                           data-swiper-filter="shop-filter-all shop-filter-accessores">
-                          <a href="card.html" class="stretched-link"></a>
+                          <a href="#" class="stretched-link"></a>
                           <span class="shop-card-bg" style="background-image: url(img/shop/shop-2.webp);"></span>
                           <div class="shop-card-info">
                             <div class="shop-card-info-start">
@@ -1055,7 +1043,7 @@
                       <div class="swiper-slide">
                         <div class="shop-card"
                           data-swiper-filter="shop-filter-all shop-filter-accessores">
-                          <a href="card.html" class="stretched-link"></a>
+                          <a href="#" class="stretched-link"></a>
                           <span class="shop-card-bg" style="background-image: url(img/shop/shop-1.webp);"></span>
                           <div class="shop-card-info">
                             <div class="shop-card-info-start">
@@ -1086,7 +1074,7 @@
                       <div class="swiper-slide">
                         <div class="shop-card"
                           data-swiper-filter="shop-filter-all shop-filter-accessores">
-                          <a href="card.html" class="stretched-link"></a>
+                          <a href="#" class="stretched-link"></a>
                           <span class="shop-card-bg" style="background-image: url(img/shop/shop-2.webp);"></span>
                           <div class="shop-card-info">
                             <div class="shop-card-info-start">
@@ -1117,7 +1105,7 @@
                       <div class="swiper-slide">
                         <div class="shop-card"
                           data-swiper-filter="shop-filter-all shop-filter-bottom">
-                          <a href="card.html" class="stretched-link"></a>
+                          <a href="#" class="stretched-link"></a>
                           <span class="shop-card-bg" style="background-image: url(img/shop/shop-1.webp);"></span>
                           <div class="shop-card-info">
                             <div class="shop-card-info-start">
@@ -1148,7 +1136,7 @@
                       <div class="swiper-slide">
                         <div class="shop-card"
                           data-swiper-filter="shop-filter-all shop-filter-bottom">
-                          <a href="card.html" class="stretched-link"></a>
+                          <a href="#" class="stretched-link"></a>
                           <span class="shop-card-bg" style="background-image: url(img/shop/shop-2.webp);"></span>
                           <div class="shop-card-info">
                             <div class="shop-card-info-start">
@@ -1179,7 +1167,7 @@
                       <div class="swiper-slide">
                         <div class="shop-card"
                           data-swiper-filter="shop-filter-all shop-filter-bottom">
-                          <a href="card.html" class="stretched-link"></a>
+                          <a href="#" class="stretched-link"></a>
                           <span class="shop-card-bg" style="background-image: url(img/shop/shop-1.webp);"></span>
                           <div class="shop-card-info">
                             <div class="shop-card-info-start">
@@ -1210,7 +1198,7 @@
                       <div class="swiper-slide">
                         <div class="shop-card"
                           data-swiper-filter="shop-filter-all shop-filter-bottom">
-                          <a href="card.html" class="stretched-link"></a>
+                          <a href="#" class="stretched-link"></a>
                           <span class="shop-card-bg" style="background-image: url(img/shop/shop-2.webp);"></span>
                           <div class="shop-card-info">
                             <div class="shop-card-info-start">
