added icon hint

--- a/app/card.html
+++ b/app/card.html
@@ -139,6 +139,26 @@
               </div>
             </div>
           </div>
+
+          <div class="main-swiper-slide-hint">
+            <span class="icon icon-mouse">
+              <svg>
+                <use xlink:href="img/icons/mouse.svg#svg-mouse"></use>
+              </svg>
+            </span>
+
+            <span class="icon icon-down">
+              <svg>
+                <use xlink:href="img/icons/arrow-down.svg#svg-arrow-down"></use>
+              </svg>
+            </span>
+
+            <span class="icon icon-swipe">
+              <svg>
+                <use xlink:href="img/icons/swipe.svg#svg-swipe"></use>
+              </svg>
+            </span>
+          </div>
         </div>
         <div class="product-end">
           <div class="product-info">
